# HorrorPlace-Constellation-Contracts

./: .editorconfig  .gitignore  10module-framework.md  CHECKLIST.md  Cargo.toml  Component-Purpose-TokenSavings-CIIntegration.csv  ContractElement-GeneratedTestType-Example.csv  Field-Content-Purpose.csv  ID-CanonicalName-InvariantFocustypicalbands-Metric.csv  Module-Schemaidsuffix-Requiredsharedfields-Module-.csv  README.md  Section-Content-Purpose.csv  config.toml  horror_modules.lua  package-lock.json  package.json  repo-manifest.hpc.constellation-contracts.json  repo-manifest.hpc.constellation-contracts.v1.json  repos-manifest.json  schema-spine-index-v1.json  schema-spine-index-views.sql  search_index.json  table-130a6e7e-817f-41f6-a7f5-1dc1963d56ee.csv  table-90f04b9d-6cb7-4a15-bf18-4f65370ed696 (1).csv  table-90f04b9d-6cb7-4a15-bf18-4f65370ed696 (2).csv  table-90f04b9d-6cb7-4a15-bf18-4f65370ed696 (3).csv  table-c45342f9-b723-43a3-9008-36b22c371c92 (1).csv  table-c45342f9-b723-43a3-9008-36b22c371c92 (2).csv  table-c45342f9-b723-43a3-9008-36b22c371c92 (3).csv  table-c45342f9-b723-43a3-9008-36b22c371c92 (4).csv  table-c45342f9-b723-43a3-9008-36b22c371c92.csv
.ai/: bci_swing_uec_soften_01.ndjson
.cargo/: config.toml
ai/: tier2_vault_ai_structure_v1.json
contracts/: audiolandscapestyle.hellscape_default.card.json  mood.dreadforge_resonance.card.json  nightwhispers-legend-contract-v1.json
crates/hpc-chat-director/: Cargo.toml
crates/hpc-chat-director/cpp/: CMakeLists.txt
crates/hpc-chat-director/cpp/include/hpc/chat_director/: chat_director.hpp  config.hpp  errors.hpp  spine.hpp
crates/hpc-chat-director/cpp/include/hpc/chat_director/types/: invariant_types.hpp  manifest_types.hpp  request_types.hpp  response_types.hpp
crates/hpc-chat-director/cpp/include/hpc/chat_director/validate/: envelopes.hpp  invariant_checker.hpp  manifests.hpp  schema_validator.hpp
crates/hpc-chat-director/cpp/src/: chat_director.cpp  config.cpp  spine.cpp
crates/hpc-chat-director/cpp/src/cli/: main.cpp
crates/hpc-chat-director/cpp/src/validate/: envelopes.cpp  invariant_checker.cpp  manifests.cpp  schema_validator.cpp
crates/hpc-chat-director/docs/: chatdirector-capability-components.csv
crates/hpc-chat-director/src/: cli.rs  cli_describe.rs  config.rs  errors.rs  lib.rs  manifests.rs  phases.rs  spine.rs  validation.rs
crates/hpc-chat-director/src/cli/: apply.rs  describe.rs  init.rs  mod.rs  plan.rs  validate_response.rs
crates/hpc-chat-director/src/generate/: event.rs  mod.rs  mood.rs  region.rs  seed.rs
crates/hpc-chat-director/src/model/: authoring_contract.rs  authoring_profile_types.rs  manifest_types.rs  mod.rs  request_types.rs  response_types.rs  spine_types.rs
crates/hpc-chat-director/src/validate/: envelopes.rs  invariants.rs  manifests.rs  mod.rs  schema.rs
crates/hpc-chat-director/tests/: cli_smoke.rs  manifest_routing.rs  planning_from_prompt.rs  response_validation.rs  spine_loading.rs
crates/hpc-constellation-audit/: Cargo.toml
crates/hpc-constellation-audit/src/: main.rs  wiring.rs
crates/hpc-routing-lint/: Cargo.toml
crates/hpc-routing-lint/src/: main.rs
crates/hpc-routing-validator/: Cargo.toml
crates/hpc-routing-validator/src/: lib.rs  wasm.rs
crates/hpc-routing-validator/tests/: routing_validator_tests.rs
db/: constellation_index.sql  schema_arcade_scheduler_and_bindings.sql  schema_bci_pipeline.sql  schema_bci_pipeline_seed_rottingvisuals.sql  schema_constellation_ontology.sql  schema_field_usage.sql
deployment/: docker-compose.yml
docs/: AI-BCI-PLAYBOOK.md  AI-DEPENDENCY-CONTRACT.md  BCI-Dev-Guide.md  CHAT_DIRECTOR v1 Implementation Research — Module Specifications.docx  CHAT_DIRECTOR v1 — Module 4–5 Deep-Dive Formal Enforcement Specification.docx  agent-tooling-policy.md  ai-authoring-file-sequences.md  ai-authoring-three-artifact-changesets.md  ai-metadata-schema.json  ai-task-index-constellation-contracts.md  ai_authoring_guidelines_v1.md  audio-rtpc-mapping-backbone-spec.md  audio_failure_atlas_authoring_notes.md  bci-audio-mapping-lab-notes.md  bci-binding-lifecycle-and-input-domain.md  bci-binding-promotion-criteria-v1.md  chat-director-research-helper.md  classic-survival-horror-pattern-library.md  constellation-index.json  constellation-repo-wiring-plan.v1.json  constellation_data_flow_v1.md  deadledger-timing-algebra-v1.md  for-ai-agents.md  nature-seeds-and-npc-behavior-shards.md  ndjson-authoring-patterns.md  nightwhispers-contract-integration.md  normative-practices.md  pattern-governance-and-mechanics.md  qpu-datashard-vocabulary.md  registry-events-spec.md  registry-regions-spec.md  roadmap-routing-v1.json  routing-spine-overview.md  seed-ritual-authoring-notes.md  seed-ritual-intensity-envelope-spec.md  seed-ritual-layer-spec.md  seed-ritual-runtime-guard.mmd  seed-rituals-contract-v1.md  systemic-timing-stack-v1.md  telemetry-resurrection-run.md
engine/: aln_binding.lua
examples/: agent-structural-limits.map-designer.v1.json  bci-geometry-bindings.lab.sample.json  game-event-trigger.dynamic_weather.v1.json  game-event-trigger.spawn_blocked.v1.json  (+4 more)
tools/: Cargo.toml  ai_chat_interface.py  audio_failure_linter.py  benchmark_tokens.py  build_dependency_graph.py  build_search_index.py  charter_compliance.py  collect_benchmarks.py  floor_bias_report.rs  formula_synthesis.py  formula_synthesis_advanced.py  generate_bci_tests.py  generate_docs.py  index_constellation.sh  index_formulas.py  invariants_spec.py  lint-seed-ritual-stage-bands.py  report_generator.py  schema_drift_detector.py  seed_ritual_lint.rs  simplify_formulas.py  train_decision_tree.py  validate_formulas.py
tools/ai-authoring-linter/: Cargo.toml
tools/ai-authoring-linter/src/: envelope.rs  file_invariants.rs  main.rs  session.rs  validation.rs
tools/ai-guards/: wandering_guard.lua
tools/bci-progress/: README.md
tools/hpc_spine_index/src/: lib.rs
tools/lua/: h_namespace_linter.lua  h_namespace_linter_cli.lua
tools/progress/output/: bci_constellation_progress.csv
tools/spine-gen/: Cargo.toml
tools/spine-gen/src/: main.rs
(+509 files in other folders)
