[workspace]
members = [
  "crates/hpc-chat-director",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Doctor0Evil/HorrorPlace-Constellation-Contracts"
homepage = "https://horrorplace.io"
description = "Schema-driven authoring compiler for the Horror$Place VM-constellation"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.18"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
pathdiff = "0.2"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
