[workspace]
members = [
    "."
]

[package]
name = "seed_ritual_tools"
version = "0.1.0"
edition = "2021"
description = "Seed-Ritual linting tools for HorrorPlace-Constellation-Contracts"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "seed_ritual_lint"
path = "seed_ritual_lint.rs"
