[package]
name = "hpc-chat-director"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for schema-driven AI authoring in Horror$Place"

[lib]
name = "hpc_chat_director"
path = "src/lib.rs"

[[bin]]
name = "hpc-chat-director"
path = "src/bin/hpc-chat-director.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
pathdiff = { workspace = true }
glob = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Optional HTTP service support
hyper = { version = "1.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
http-service = ["dep:hyper", "dep:tokio"]

[dev-dependencies]
tempfile = "3.10"
insta = { version = "1.34", features = ["json"] }
